Upload all file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="#schedule">Schedule</a></li>
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="thesis.html">Thesis</a></li>
       </ul>
       <a href="#register" class="btn">Register</a>
     </nav>
